--- a/config/database.yml
+++ b/config/database.yml
@@ -12,7 +12,7 @@ development:
 
 test:
   <<: *default
-  database: netflix_fast_example_app_test
+  database: netflix_fast_example_app_test<%= ENV['TEST_ENV_NUMBER'] %>b
   url: <%= ENV["DATABASE_URL"] %>
 
 production:
